<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    android:background="@drawable/bg_round_corner_medium"
    android:backgroundTint="@color/background">

    <!-- Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/select_voice_type"
        android:textColor="@color/textPrimaryColor"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold" />

    <!-- Voice Options -->
    <RadioGroup
        android:id="@+id/radioGroupVoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp">

        <!-- Female Voice Option -->
        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/primary"
            android:paddingStart="@dimen/_8sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/female_voice"
            android:textColor="@color/textPrimaryColor"
            android:textSize="@dimen/_14sdp" />

        <!-- Male Voice Option -->
        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/primary"
            android:paddingStart="@dimen/_8sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/male_voice"
            android:textColor="@color/textPrimaryColor"
            android:textSize="@dimen/_14sdp" />
    </RadioGroup>

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:orientation="horizontal">

        <!-- Cancel Button -->
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/textPrimaryColor"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/vn_semi_bold"
            android:background="@drawable/bg_button_round_conner"
            android:backgroundTint="@color/tertiaryBackground"/>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/textSecondaryColor"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/vn_semi_bold"
            android:background="@drawable/bg_primary_button"
            />
    </LinearLayout>
</LinearLayout>