<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_item_day_unselected"
    android:padding="@dimen/_10sdp"
    android:layout_marginVertical="@dimen/_6sdp">

    <TextView
        android:id="@+id/tv_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day"
        android:textSize="@dimen/_16sdp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:fontFamily="@font/vn_bold"
        android:layout_marginBottom="@dimen/_10sdp"
        />

    <TextView
        android:id="@+id/tv_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercises"
        android:textSize="@dimen/_12sdp"
        android:layout_below="@id/tv_day"
        android:layout_alignParentStart="true"
        android:textColor="@color/textTertiaryColor"
        />

    <TextView
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_start_exercise_button"
        android:textColor="@color/textSecondaryColor"
        android:textAllCaps="false"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/iv_circle_check"
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_32sdp"
        android:contentDescription="@null"
        android:src="@drawable/ic_check_circle"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        app:tint="@color/primary"
        />

    <ImageView
        android:id="@+id/iv_lock"
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_32sdp"
        android:contentDescription="@null"
        android:src="@drawable/ic_lock"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        app:tint="@color/iconTertiaryColor"
        android:visibility="gone"
        />

</RelativeLayout>